--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -67,7 +66,7 @@
       </section>
       <!--section3-->
       <section>
-        <h2>Wtah Are We Doing</h2>
+        <h2>What Are We Doing</h2>
         <ul>
           <li>
             <img
@@ -97,7 +96,7 @@
       </section>
       <!--section4-->
       <section>
-        <h2>Our TEam</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
