--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
+      </nav>
+      <address>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </nav>
+      </address>
     </header>
     <main>
-      <!--section-->
-      <section>
+      <div>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </section>
-      <!--section2-->
+      </div>
+      <!--section1-->
       <section>
         <ul>
           <li>
@@ -64,7 +65,7 @@
           </li>
         </ul>
       </section>
-      <!--section3-->
+      <!--section2-->
       <section>
         <h2>What Are We Doing</h2>
         <ul>
@@ -94,7 +95,7 @@
           </li>
         </ul>
       </section>
-      <!--section4-->
+      <!--section3-->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -142,7 +143,7 @@
       </section>
     </main>
     <footer>
-      <a href="index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
