--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
       </address>
     </header>
     <main>
-      <div>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </div>
       <!--section1-->
       <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!--section2-->
+      <section>
+        <h2 hidden>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -65,7 +67,7 @@
           </li>
         </ul>
       </section>
-      <!--section2-->
+      <!--section3-->
       <section>
         <h2>What Are We Doing</h2>
         <ul>
@@ -95,7 +97,7 @@
           </li>
         </ul>
       </section>
-      <!--section3-->
+      <!--section4-->
       <section>
         <h2>Our Team</h2>
         <ul>
