--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <!--section3-->
       <section>
-        <h2>What Are We Doing</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
