--- a/index.html
+++ b/index.html
@@ -5,148 +5,180 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+  <body class="body">
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html">
+          <span class="logo-web">WEB</span>
+          <span class="logo-studio">STUDIO</span>
+        </a>
+        <ul class="menu list-reset">
+          <li class="menu-item">
+            <a href="./index.html" class="menu-item-link">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a href="./portfolio.html" class="menu-item-link">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a href="" class="menu-item-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <ul class="contacts list-reset">
+        <li class="contacts-item">
+          <a class="contacts-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contacts-item">
+          <a class="contacts-link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
       <!--section1-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <a href="./order" class="button">Order Service</a>
       </section>
       <!--section2-->
-      <section>
-        <h2 hidden>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="features">
+        <div class="container">
+          <h2 hidden>Features</h2>
+          <ul class="features-list list-reset">
+            <li class="features-item">
+              <h3 class="features-title">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section3-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/wawd1.jpg"
-              alt="monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/wawd2.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/wawd3.jpg"
-              alt="aplication"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="projects">
+        <div class="container">
+          <h2 class="projects-title">What are we doing</h2>
+          <ul class="projects-list list-reset">
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/wawd1.jpg"
+                alt="monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/wawd2.jpg"
+                alt="phone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/wawd3.jpg"
+                alt="aplication"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section4-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list-reset">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/ourteam1.jpg"
               alt="Product Designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/ourteam2.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/ourteam3.jpg"
               alt="Marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/ourteam4.jpg"
               alt="UI Designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html">
+        <span class="logo-web">WEB</span>
+        <span class="footer-logo-studio">STUDIO</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
