--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/banking_app.jpg"
+              src="./images/banking_app.jpg"
               alt="Banking App Interface Concept"
               width="360"
               height="300"
@@ -83,7 +83,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/cashless.jpg"
+              src="./images/cashless.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -94,7 +94,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/meditaion.jpg"
+              src="./images/meditaion.jpg"
               alt="Meditaion App"
               width="360"
               height="300"
@@ -105,7 +105,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/taxi.jpg"
+              src="./images/taxi.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -116,7 +116,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/screen.jpg"
+              src="./images/screen.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -128,7 +128,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/online_courses.jpg"
+              src="./images/online_courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
@@ -139,7 +139,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/instagram.jpg"
+              src="./images/instagram.jpg"
               alt="Instagram Stories Concept"
               width="360"
               height="300"
@@ -150,7 +150,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/organic_food.jpg"
+              src="./images/organic_food.jpg"
               alt="Organic Food"
               width="360"
               height="300"
@@ -161,7 +161,7 @@
           <li class="projectcard-item">
             <img
               class="projectcard-img"
-              src="./images_portfolio/fresh_coffee.jpg"
+              src="./images/fresh_coffee.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
