--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!--section1-->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <a href="./order" class="button">Order Service</a>
+        <a href="./order" class="button button--primary">Order Service</a>
       </section>
       <!--section2-->
       <section class="features">
