--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <body class="body">
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html">
-          <span class="logo-web">WEB</span>
-          <span class="logo-studio">STUDIO</span>
+        <a href="./index.html" class="logo-web"
+          >WEB <span class="logo-studio">STUDIO</span>
         </a>
         <ul class="menu list-reset">
           <li class="menu-item">
@@ -174,10 +173,11 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        <span class="logo-web">WEB</span>
+      <a href="./index.html" class="logo-web"
+        >WEB
         <span class="footer-logo-studio">STUDIO</span>
       </a>
+
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
