--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,8 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html">
-          <span class="logo-web">WEB</span>
-          <span class="logo-studio">STUDIO</span>
+        <a href="./index.html" class="logo-web"
+          >WEB <span class="logo-studio">STUDIO</span>
         </a>
         <ul class="menu list-reset">
           <li class="menu-item">
@@ -49,7 +48,7 @@
       <!--section1-->
 
       <div class="container">
-        <h1 hidden>Projects</h1>
+        <h1></h1>
         <button
           class="button button--secondary button--sm active"
           type="button"
@@ -68,6 +67,7 @@
         <button class="button button--secondary button--sm" type="button">
           Marketing
         </button>
+        <!--section2-->
         <ul class="projectcard list-reset">
           <li class="projectcard-item">
             <img
@@ -80,102 +80,118 @@
             <h2 class="projectcard-name">Banking App Interface Concept</h2>
             <p class="projectcard-position">App</p>
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/cashless.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Cashless Payment</h2>
-            <p class="projectcard-position">Marketing</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/cashless.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Cashless Payment</h2>
+              <p class="projectcard-position">Marketing</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/meditaion.jpg"
-              alt="Meditaion App"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Meditaion App</h2>
-            <p class="projectcard-position">App</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/meditaion.jpg"
+                alt="Meditaion App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Meditaion App</h2>
+              <p class="projectcard-position">App</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/taxi.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Taxi Service</h2>
-            <p class="projectcard-position">Marketing</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Taxi Service</h2>
+              <p class="projectcard-position">Marketing</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
 
-            <h2 class="projectcard-name">Screen Illustrations</h2>
-            <p class="projectcard-position">Design</p>
+              <h2 class="projectcard-name">Screen Illustrations</h2>
+              <p class="projectcard-position">Design</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/online_courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Online Courses</h2>
-            <p class="projectcard-position">Marketing</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/online_courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Online Courses</h2>
+              <p class="projectcard-position">Marketing</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/instagram.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Instagram Stories Concept</h2>
-            <p class="projectcard-position">Design</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/instagram.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Instagram Stories Concept</h2>
+              <p class="projectcard-position">Design</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/organic_food.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Organic Food</h2>
-            <p class="projectcard-position">Web site</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/organic_food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Organic Food</h2>
+              <p class="projectcard-position">Web site</p></a
+            >
           </li>
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/fresh_coffee.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Fresh Coffee</h2>
-            <p class="projectcard-position">Web site</p>
+          <li>
+            <a class="projectcard-item" href="">
+              <img
+                class="projectcard-img"
+                src="./images/fresh_coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name">Fresh Coffee</h2>
+              <p class="projectcard-position">Web site</p></a
+            >
           </li>
         </ul>
       </div>
     </main>
-    <!--section2-->
+    <!--section3-->
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        <span class="logo-web">WEB</span>
+      <a href="./index.html" class="logo-web"
+        >WEB
         <span class="footer-logo-studio">STUDIO</span>
       </a>
       <p class="footer-text">
