--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="./index.html" class="logo-web"
           >WEB <span class="logo-studio">STUDIO</span>
         </a>
-        <ul class="menu list-reset">
+        <ul class="menu">
           <li class="menu-item">
             <a href="./index.html" class="menu-item-link">Studio</a>
           </li>
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="contacts list-reset">
+      <ul class="contacts">
         <li class="contacts-item">
           <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
