--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
   <body class="body">
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-web"
-          >WEB <span class="logo-studio">STUDIO</span>
+        <a href="./index.html" class="logo-web link"
+          >WEB <span class="logo-studio link">STUDIO</span>
         </a>
-        <ul class="menu">
+        <ul class="menu list text">
           <li class="menu-item">
-            <a href="./index.html" class="menu-item-link">Studio</a>
+            <a href="./index.html" class="menu-item-link link">Studio</a>
           </li>
           <li class="menu-item">
-            <a href="./portfolio.html" class="menu-item-link">Portfolio</a>
+            <a href="./portfolio.html" class="menu-item-link link">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-item-link">Contacts</a>
+            <a href="" class="menu-item-link link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul class="contacts">
+      <ul class="contacts list">
         <li class="contacts-item">
-          <a class="contacts-link" href="mailto:info@devstudio.com"
+          <a class="contacts-link link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li class="contacts-item">
-          <a class="contacts-link" href="tel:+110001111111"
+          <a class="contacts-link link" href="tel:+110001111111"
             >+11 (000) 111-11-11</a
           >
         </li>
@@ -48,84 +48,80 @@
       <!--section1-->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <a href="./order" class="button button--primary">Order Service</a>
+        <a href="" class="button link btn">Order Service</a>
       </section>
       <!--section2-->
       <section class="features">
-        <div class="container">
-          <h2 hidden>Features</h2>
-          <ul class="features-list list-reset">
-            <li class="features-item">
-              <h3 class="features-title">Strategy</h3>
-              <p class="features-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="features-item">
-              <h3 class="features-title">Punctuality</h3>
-              <p class="features-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="features-item">
-              <h3 class="features-title">Diligence</h3>
-              <p class="features-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="features-item">
-              <h3 class="features-title">Technologies</h3>
-              <p class="features-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </div>
+        <h2 hidden>Features</h2>
+        <ul class="features-list list">
+          <li class="features-item">
+            <h3 class="features-title titile-text">Strategy</h3>
+            <p class="features-text text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title titile-text">Punctuality</h3>
+            <p class="features-text text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title titile-text">Diligence</h3>
+            <p class="features-text text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title titile-text">Technologies</h3>
+            <p class="features-text text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <!--section3-->
       <section class="projects">
-        <div class="container">
-          <h2 class="projects-title">What are we doing</h2>
-          <ul class="projects-list list-reset">
-            <li class="projects-item">
-              <img
-                class="projects-img"
-                src="./images/wawd1.jpg"
-                alt="monitor"
-                width="360"
-                height="300"
-              />
-            </li>
-            <li class="projects-item">
-              <img
-                class="projects-img"
-                src="./images/wawd2.jpg"
-                alt="phone"
-                width="360"
-                height="300"
-              />
-            </li>
-            <li class="projects-item">
-              <img
-                class="projects-img"
-                src="./images/wawd3.jpg"
-                alt="aplication"
-                width="360"
-                height="300"
-              />
-            </li>
-          </ul>
-        </div>
+        <h2 class="projects-title">What are we doing</h2>
+        <ul class="projects-list list">
+          <li class="projects-item">
+            <img
+              class="projects-img"
+              src="./images/wawd1.jpg"
+              alt="monitor"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-img"
+              src="./images/wawd2.jpg"
+              alt="phone"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-img"
+              src="./images/wawd3.jpg"
+              alt="aplication"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
       </section>
       <!--section4-->
-      <section class="team">
+      <section class="">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list-reset">
-          <li class="team-item">
+        <ul class="team-list">
+          <li class="team-item list">
             <img
               class="team-img"
               src="./images/ourteam1.jpg"
@@ -133,10 +129,10 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
+            <h3 class="team-name titile-text">Mark Guerrero</h3>
+            <p class="team-position text">Product Designer</p>
           </li>
-          <li class="team-item">
+          <li class="team-item list">
             <img
               class="team-img"
               src="./images/ourteam2.jpg"
@@ -144,10 +140,10 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
+            <h3 class="team-name titile-text">Tom Ford</h3>
+            <p class="team-position text">Frontend Developer</p>
           </li>
-          <li class="team-item">
+          <li class="team-item list">
             <img
               class="team-img"
               src="./images/ourteam3.jpg"
@@ -155,10 +151,10 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
+            <h3 class="team-name titile-text">Camila Garcia</h3>
+            <p class="team-position text">Marketing</p>
           </li>
-          <li class="team-item">
+          <li class="team-item list">
             <img
               class="team-img"
               src="./images/ourteam4.jpg"
@@ -166,16 +162,16 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
+            <h3 class="team-name titile-text">Daniel Wilson</h3>
+            <p class="team-position text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-web"
+      <a href="./index.html" class="footer-logo-web link"
         >WEB
-        <span class="footer-logo-studio">STUDIO</span>
+        <span class="footer-logo-studio link">STUDIO</span>
       </a>
 
       <p class="footer-text">
