--- a/portfolio.html
+++ b/portfolio.html
@@ -16,22 +16,22 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-web"
-          >WEB <span class="logo-studio">STUDIO</span>
+        <a href="./index.html" class="logo-web link"
+          >WEB <span class="logo-studio link">STUDIO</span>
         </a>
-        <ul class="menu list-reset">
+        <ul class="menu list">
           <li class="menu-item">
-            <a href="./index.html" class="menu-item-link">Studio</a>
+            <a href="./index.html" class="menu-item-link link">Studio</a>
           </li>
           <li class="menu-item">
-            <a href="./portfolio.html" class="menu-item-link">Portfolio</a>
+            <a href="./portfolio.html" class="menu-item-link link">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-item-link">Contacts</a>
+            <a href="" class="menu-item-link link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul class="contacts list-reset">
+      <ul class="contacts list">
         <li class="contacts-item">
           <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -46,153 +46,127 @@
     </header>
     <main>
       <!--section1-->
+      <h1 hidden class="buttons">filters</h1>
+      <a href="" class="button-link link btn" type="button">All</a>
+      <a href="" class="button-link link btn" type="button">Web Site</a>
+      <a href="" class="button-link link btn" type="button">App</a>
+      <a href="" class="button-link link btn" type="button">Design</a>
+      <a href="" class="button-link link btn" type="button">Marketing</a>
+      <!--section2-->
+      <ul class="projectcard list">
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/banking_app.jpg"
+            alt="Banking App Interface Concept"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">
+            Banking App Interface Concept
+          </h2>
+          <p class="projectcard-position link text">App</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/cashless.jpg"
+            alt="Cashless Payment"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">Cashless Payment</h2>
+          <p class="projectcard-position link text">Marketing</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/meditaion.jpg"
+            alt="Meditaion App"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">Meditaion App</h2>
+          <p class="projectcard-position link text">App</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/taxi.jpg"
+            alt="Taxi Service"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">Taxi Service</h2>
+          <p class="projectcard-position link text">Marketing</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/screen.jpg"
+            alt="Screen Illustrations"
+            width="360"
+            height="300"
+          />
 
-      <div class="container">
-        <h1></h1>
-        <button
-          class="button button--secondary button--sm active"
-          type="button"
-        >
-          All
-        </button>
-        <button class="button button--secondary button--sm" type="button">
-          Web Site
-        </button>
-        <button class="button button--secondary button--sm" type="button">
-          App
-        </button>
-        <button class="button button--secondary button--sm" type="button">
-          Design
-        </button>
-        <button class="button button--secondary button--sm" type="button">
-          Marketing
-        </button>
-        <!--section2-->
-        <ul class="projectcard list-reset">
-          <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/banking_app.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name">Banking App Interface Concept</h2>
-            <p class="projectcard-position">App</p>
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Cashless Payment</h2>
-              <p class="projectcard-position">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/meditaion.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Meditaion App</h2>
-              <p class="projectcard-position">App</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Taxi Service</h2>
-              <p class="projectcard-position">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-
-              <h2 class="projectcard-name">Screen Illustrations</h2>
-              <p class="projectcard-position">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/online_courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Online Courses</h2>
-              <p class="projectcard-position">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/instagram.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Instagram Stories Concept</h2>
-              <p class="projectcard-position">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/organic_food.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Organic Food</h2>
-              <p class="projectcard-position">Web site</p></a
-            >
-          </li>
-          <li>
-            <a class="projectcard-item" href="">
-              <img
-                class="projectcard-img"
-                src="./images/fresh_coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name">Fresh Coffee</h2>
-              <p class="projectcard-position">Web site</p></a
-            >
-          </li>
-        </ul>
-      </div>
+          <h2 class="projectcard-name link titile-text">
+            Screen Illustrations
+          </h2>
+          <p class="projectcard-position link text">Design</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/online_courses.jpg"
+            alt="Online Courses"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">Online Courses</h2>
+          <p class="projectcard-position link text">Marketing</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/instagram.jpg"
+            alt="Instagram Stories Concept"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">
+            Instagram Stories Concept
+          </h2>
+          <p class="projectcard-position link text">Design</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/organic_food.jpg"
+            alt="Organic Food"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">Organic Food</h2>
+          <p class="projectcard-position link text">Web site</p>
+        </li>
+        <li class="projectcard-item">
+          <img
+            class="projectcard-img"
+            src="./images/fresh_coffee.jpg"
+            alt="Fresh Coffee"
+            width="360"
+            height="300"
+          />
+          <h2 class="projectcard-name link titile-text">Fresh Coffee</h2>
+          <p class="projectcard-position link text">Web site</p>
+        </li>
+      </ul>
     </main>
     <!--section3-->
     <footer class="footer">
-      <a href="./index.html" class="logo-web"
+      <a href="./index.html" class="footer-logo-web link"
         >WEB
-        <span class="footer-logo-studio">STUDIO</span>
+        <span class="footer-logo-studio link">STUDIO</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
