--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,7 @@
             </button>
           </li>
         </ul>
+        <h2 hidden class="banking-app">Banking App Interface Concep</h2>
         <ul class="projectcard list">
           <li class="projectcard-item">
             <img
@@ -76,7 +77,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">
+            <h2 class="projectcard-name link title-text">
               Banking App Interface Concept
             </h2>
             <p class="projectcard-position link text">App</p>
@@ -89,7 +90,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">Cashless Payment</h2>
+            <h2 class="projectcard-name link title-text">Cashless Payment</h2>
             <p class="projectcard-position link text">Marketing</p>
           </li>
           <li class="projectcard-item">
@@ -100,7 +101,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">Meditaion App</h2>
+            <h2 class="projectcard-name link title-text">Meditaion App</h2>
             <p class="projectcard-position link text">App</p>
           </li>
           <li class="projectcard-item">
@@ -111,7 +112,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">Taxi Service</h2>
+            <h2 class="projectcard-name link title-text">Taxi Service</h2>
             <p class="projectcard-position link text">Marketing</p>
           </li>
           <li class="projectcard-item">
@@ -123,7 +124,7 @@
               height="300"
             />
 
-            <h2 class="projectcard-name link titile-text">
+            <h2 class="projectcard-name link title-text">
               Screen Illustrations
             </h2>
             <p class="projectcard-position link text">Design</p>
@@ -136,7 +137,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">Online Courses</h2>
+            <h2 class="projectcard-name link title-text">Online Courses</h2>
             <p class="projectcard-position link text">Marketing</p>
           </li>
           <li class="projectcard-item">
@@ -147,7 +148,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">
+            <h2 class="projectcard-name link title-text">
               Instagram Stories Concept
             </h2>
             <p class="projectcard-position link text">Design</p>
@@ -160,7 +161,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">Organic Food</h2>
+            <h2 class="projectcard-name link title-text">Organic Food</h2>
             <p class="projectcard-position link text">Web site</p>
           </li>
           <li class="projectcard-item">
@@ -171,7 +172,7 @@
               width="360"
               height="300"
             />
-            <h2 class="projectcard-name link titile-text">Fresh Coffee</h2>
+            <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
             <p class="projectcard-position link text">Web site</p>
           </li>
         </ul>
