--- a/index.html
+++ b/index.html
@@ -50,35 +50,35 @@
       <!--section1-->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <a href="" class="button link btn">Order Service</a>
+        <button class="button link btn" type="button">Order Service</button>
       </section>
       <!--section2-->
       <section class="features">
         <h2 hidden>Features</h2>
         <ul class="features-list list">
           <li class="features-item">
-            <h3 class="features-title titile-text">Strategy</h3>
+            <h3 class="features-title title-text">Strategy</h3>
             <p class="features-text text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title titile-text">Punctuality</h3>
+            <h3 class="features-title title-text">Punctuality</h3>
             <p class="features-text text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title titile-text">Diligence</h3>
+            <h3 class="features-title title-text">Diligence</h3>
             <p class="features-text text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title titile-text">Technologies</h3>
+            <h3 class="features-title title-text">Technologies</h3>
             <p class="features-text text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -131,7 +131,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name titile-text">Mark Guerrero</h3>
+            <h3 class="team-name title-text">Mark Guerrero</h3>
             <p class="team-position text">Product Designer</p>
           </li>
           <li class="team-item list">
@@ -142,7 +142,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name titile-text">Tom Ford</h3>
+            <h3 class="team-name title-text">Tom Ford</h3>
             <p class="team-position text">Frontend Developer</p>
           </li>
           <li class="team-item list">
@@ -153,7 +153,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name titile-text">Camila Garcia</h3>
+            <h3 class="team-name title-text">Camila Garcia</h3>
             <p class="team-position text">Marketing</p>
           </li>
           <li class="team-item list">
@@ -164,7 +164,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name titile-text">Daniel Wilson</h3>
+            <h3 class="team-name title-text">Daniel Wilson</h3>
             <p class="team-position text">UI Designer</p>
           </li>
         </ul>
