--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             </button>
           </li>
         </ul>
-        <h2 hidden class="banking-app">Banking App Interface Concep</h2>
+        <h2 class="banking-app">Banking App Interface Concep</h2>
         <ul class="projectcard list">
           <li class="projectcard-item">
             <img
