--- a/portfolio.html
+++ b/portfolio.html
@@ -47,21 +47,20 @@
     <main>
       <!--section1-->
       <section class="portfolio-section">
-        <h1 hidden class="buttons">filters</h1>
         <ul class="section-button list">
-          <li>
+          <li class="btn-link-item list">
             <button class="button-link link btn" type="button">All</button>
           </li>
-          <li>
+          <li class="btn-link-item list">
             <button class="button-link link btn" type="button">Web Site</button>
           </li>
           <li>
             <button class="button-link link btn" type="button">App</button>
           </li>
-          <li>
+          <li class="btn-link-item list">
             <button class="button-link link btn" type="button">Design</button>
           </li>
-          <li>
+          <li class="btn-link-item list">
             <button class="button-link link btn" type="button">
               Marketing
             </button>
