--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <button class="button link btn" type="button">Order Service</button>
       </section>
       <!--section2-->
-      <section class="features">
-        <h2 hidden>Features</h2>
+      <section>
+        <h2 hidden class="features">Features</h2>
         <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-title title-text">Strategy</h3>
@@ -120,8 +120,8 @@
         </ul>
       </section>
       <!--section4-->
-      <section class="">
-        <h2 class="team-title">Our Team</h2>
+      <section>
+        <h2 class="team-title list">Our Team</h2>
         <ul class="team-list">
           <li class="team-item list">
             <img
@@ -173,7 +173,7 @@
     <footer class="footer">
       <a href="./index.html" class="footer-logo-web link"
         >WEB
-        <span class="footer-logo-studio link">STUDIO</span>
+        <span class="footer-logo-studio link">Studio</span>
       </a>
 
       <p class="footer-text">
