--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,7 @@
     <main>
       <!--section1-->
       <section class="portfolio-section">
+        <h1 hidden class="buttons">filters</h1>
         <ul class="section-button list">
           <li class="btn-link-item list">
             <button class="button-link link btn" type="button">All</button>
