--- a/portfolio.html
+++ b/portfolio.html
@@ -50,21 +50,19 @@
         <h1 hidden class="buttons">filters</h1>
         <ul class="section-button list">
           <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">All</button>
+            <a class="button-link link btn" href="">All</a>
           </li>
           <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">Web Site</button>
+            <a class="button-link link btn" href="">Web Site</a>
           </li>
           <li>
-            <button class="button-link link btn" type="button">App</button>
+            <a class="button-link link btn" href="">App</a>
           </li>
           <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">Design</button>
+            <a class="button-link link btn" href="">Design</a>
           </li>
           <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">
-              Marketing
-            </button>
+            <a class="button-link link btn" href=""> Marketing </a>
           </li>
         </ul>
         <ul class="projectcard list">
