--- a/portfolio.html
+++ b/portfolio.html
@@ -69,17 +69,19 @@
         </ul>
         <ul class="projectcard list">
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/banking_app.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">
-              Banking App Interface Concept
-            </h2>
-            <p class="projectcard-position link text">App</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/banking_app.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">
+                Banking App Interface Concept
+              </h2>
+              <p class="projectcard-position link text">App</p>
+            </a>
           </li>
           <li class="projectcard-item">
             <img
