--- a/portfolio.html
+++ b/portfolio.html
@@ -95,86 +95,100 @@
             <p class="projectcard-position link text">Marketing</p>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/meditaion.jpg"
-              alt="Meditaion App"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">Meditaion App</h2>
-            <p class="projectcard-position link text">App</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/meditaion.jpg"
+                alt="Meditaion App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">Meditaion App</h2>
+              <p class="projectcard-position link text">App</p>
+            </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/taxi.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">Taxi Service</h2>
-            <p class="projectcard-position link text">Marketing</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">Taxi Service</h2>
+              <p class="projectcard-position link text">Marketing</p>
+            </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
 
-            <h2 class="projectcard-name link title-text">
-              Screen Illustrations
-            </h2>
-            <p class="projectcard-position link text">Design</p>
+              <h2 class="projectcard-name link title-text">
+                Screen Illustrations
+              </h2>
+              <p class="projectcard-position link text">Design</p>
+            </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/online_courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">Online Courses</h2>
-            <p class="projectcard-position link text">Marketing</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/online_courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">Online Courses</h2>
+              <p class="projectcard-position link text">Marketing</p>
+            </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/instagram.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">
-              Instagram Stories Concept
-            </h2>
-            <p class="projectcard-position link text">Design</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/instagram.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">
+                Instagram Stories Concept
+              </h2>
+              <p class="projectcard-position link text">Design</p>
+            </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/organic_food.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">Organic Food</h2>
-            <p class="projectcard-position link text">Web site</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/organic_food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">Organic Food</h2>
+              <p class="projectcard-position link text">Web site</p>
+            </a>
           </li>
           <li class="projectcard-item">
-            <img
-              class="projectcard-img"
-              src="./images/fresh_coffee.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
-            <p class="projectcard-position link text">Web site</p>
+            <a class="link" href="">
+              <img
+                class="projectcard-img"
+                src="./images/fresh_coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
+              <p class="projectcard-position link text">Web site</p>
+            </a>
           </li>
         </ul>
       </section>
