--- a/index.html
+++ b/index.html
@@ -69,8 +69,14 @@
       <section class="section features">
         <div class="container">
           <h2 hidden>Features</h2>
+
           <ul class="features-list list">
             <li class="features-item">
+              <div class="icon">
+                <svg class="icon-item">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title title-text">Strategy</h3>
               <p class="features-text text">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +84,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon">
+                <svg class="icon-item">
+                  <use href="./images/symbol-defs.svg#"></use>
+                </svg>
+              </div>
               <h3 class="features-title title-text">Punctuality</h3>
               <p class="features-text text">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +96,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon">
+                <svg class="icon-item">
+                  <use href="./images/symbol-defs.svg#"></use>
+                </svg>
+              </div>
               <h3 class="features-title title-text">Diligence</h3>
               <p class="features-text text">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +108,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon">
+                <svg class="icon-item">
+                  <use href="./images/symbol-defs.svg#"></use>
+                </svg>
+              </div>
               <h3 class="features-title title-text">Technologies</h3>
               <p class="features-text text">
                 Design practice focused on digital experiences. We bring forth a
@@ -197,6 +218,21 @@
         </div>
       </section>
     </main>
+    <!--section-customers-->
+    <h2 class="customers">Customers</h2>
+    <ul>
+      <li>
+        <svg width="20" height="20" class="barbers-soc-icon">
+          <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+        </svg>
+      </li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+
     <!--section-footer-->
     <footer class="footer">
       <div class="container">
