--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
             <li class="features-item">
               <div class="icon">
                 <svg class="icon-item">
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-antenna"
+                    width="64"
+                    height="64"
+                  ></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Strategy</h3>
@@ -86,7 +90,11 @@
             <li class="features-item">
               <div class="icon">
                 <svg class="icon-item">
-                  <use href="./images/symbol-defs.svg#"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-clock"
+                    width="64"
+                    height="64"
+                  ></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Punctuality</h3>
@@ -98,7 +106,11 @@
             <li class="features-item">
               <div class="icon">
                 <svg class="icon-item">
-                  <use href="./images/symbol-defs.svg#"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-diagram"
+                    width="64"
+                    height="64"
+                  ></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Diligence</h3>
@@ -110,7 +122,11 @@
             <li class="features-item">
               <div class="icon">
                 <svg class="icon-item">
-                  <use href="./images/symbol-defs.svg#"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-astronaut"
+                    width="64"
+                    height="64"
+                  ></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Technologies</h3>
@@ -220,17 +236,73 @@
     </main>
     <!--section-customers-->
     <h2 class="customers">Customers</h2>
-    <ul>
-      <li>
-        <svg width="20" height="20" class="barbers-soc-icon">
-          <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
-        </svg>
+    <ul class="customers-item">
+      <li class="customers-link">
+        <a class="" href="">
+          <svg>
+            <use
+              href="./images/symbol-defs.svg#icon-logo"
+              Width="104"
+              Height="56"
+            ></use>
+          </svg>
+        </a>
       </li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li class="customers-link">
+        <a class="" href="">
+          <svg>
+            <use
+              href="./images/symbol-defs.svg#icon-logo-1"
+              Width="104"
+              Height="56"
+            ></use>
+          </svg>
+        </a>
+      </li>
+      <li class="customers-link">
+        <a class="" href="">
+          <svg>
+            <use
+              href="./images/symbol-defs.svg#icon-logo-2"
+              Width="104"
+              Height="56"
+            ></use>
+          </svg>
+        </a>
+      </li>
+      <li class="customers-link">
+        <a class="" href="">
+          <svg>
+            <use
+              href="./images/symbol-defs.svg#icon-logo-3"
+              Width="104"
+              Height="56"
+            ></use>
+          </svg>
+        </a>
+      </li>
+      <li class="customers-link">
+        <a class="" href="">
+          <svg>
+            <use
+              href="./images/symbol-defs.svg#icon-logo-4"
+              Width="104"
+              Height="56"
+            ></use>
+          </svg>
+        </a>
+      </li>
+      <li class="customers-link">
+        <a class="" href="">
+          <svg>
+            <use
+              href="./images/symbol-defs.svg#icon-logo-5"
+              Width="104"
+              Height="56"
+            ></use>
+          </svg>
+        </a>
+      </li>
     </ul>
 
     <!--section-footer-->
