--- a/index.html
+++ b/index.html
@@ -189,6 +189,42 @@
               <div class="element-style">
                 <h3 class="team-name title-text">Mark Guerrero</h3>
                 <p class="team-position text">Product Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item link">
+                    <a class="team-soc-link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item link">
+                    <a class="team-soc-link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item list">
@@ -202,6 +238,42 @@
               <div class="element-style">
                 <h3 class="team-name title-text">Tom Ford</h3>
                 <p class="team-position text">Frontend Developer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item list">
@@ -215,9 +287,43 @@
               <div class="element-style">
                 <h3 class="team-name title-text">Camila Garcia</h3>
                 <p class="team-position text">Marketing</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-            </li>
-            <li class="team-item list">
               <img
                 class="team-img"
                 src="./images/ourteam4.jpg"
@@ -228,6 +334,42 @@
               <div class="element-style">
                 <h3 class="team-name title-text">Daniel Wilson</h3>
                 <p class="team-position text">UI Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href="">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -238,7 +380,7 @@
     <h2 class="customers">Customers</h2>
     <ul class="customers-item">
       <li class="customers-link">
-        <a class="" href="">
+        <a class="team-soc-link link" href="">
           <svg>
             <use
               href="./images/symbol-defs.svg#icon-logo"
@@ -249,7 +391,7 @@
         </a>
       </li>
       <li class="customers-link">
-        <a class="" href="">
+        <a class="customers-item-link" href="">
           <svg>
             <use
               href="./images/symbol-defs.svg#icon-logo-1"
@@ -260,7 +402,7 @@
         </a>
       </li>
       <li class="customers-link">
-        <a class="" href="">
+        <a class="customers-item-link" href="">
           <svg>
             <use
               href="./images/symbol-defs.svg#icon-logo-2"
@@ -271,7 +413,7 @@
         </a>
       </li>
       <li class="customers-link">
-        <a class="" href="">
+        <a class="customers-item-link" href="">
           <svg>
             <use
               href="./images/symbol-defs.svg#icon-logo-3"
@@ -282,7 +424,7 @@
         </a>
       </li>
       <li class="customers-link">
-        <a class="" href="">
+        <a class="customers-item-link" href="">
           <svg>
             <use
               href="./images/symbol-defs.svg#icon-logo-4"
@@ -293,7 +435,7 @@
         </a>
       </li>
       <li class="customers-link">
-        <a class="" href="">
+        <a class="customers-item-link" href="">
           <svg>
             <use
               href="./images/symbol-defs.svg#icon-logo-5"
@@ -317,6 +459,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div>
+        <h3 class="social">Social media</h3>
+        <ul class="social-item">
+          <li class="social-link">
+            <a class="social-link-item link" href="">
+              <svg width="20" height="20" class="media-link">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link">
+            <a class="social-link-item link" href="">
+              <svg width="20" height="20" class="media-link">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link">
+            <a class="social-link-item link" href="">
+              <svg width="20" height="20" class="media-link">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link">
+            <a class="social-link-item link" href="">
+              <svg width="20" height="20" class="media-link">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
