--- a/index.html
+++ b/index.html
@@ -324,10 +324,12 @@
                   </li>
                 </ul>
               </div>
+            </li>
+            <li class="team-item list">
               <img
                 class="team-img"
                 src="./images/ourteam4.jpg"
-                alt="UI Designer"
+                alt="Product Designer"
                 width="264"
                 height="260"
               />
@@ -344,15 +346,15 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-soc-item">
-                    <a class="team-soc-link link" href="">
+                  <li class="team-soc-item link">
+                    <a class="team-soc-link" href="">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-soc-item">
-                    <a class="team-soc-link link" href="">
+                  <li class="team-soc-item link">
+                    <a class="team-soc-link" href="">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
